correction logiciels car pas de zip taille trop grosse

--- a/index.html
+++ b/index.html
@@ -305,6 +305,20 @@
               </div> -->
             </div>
           </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="box" data-aos="zoom-in">
+              <h3>Préparer le matériel et logiciels</h3>
+              <h4></h4>
+              <ul>
+                <li> Cahier d'algorithmie</li>
+                <li> Clé usb avec les logiciels installés</li>
+                <li>Installer les logiciels : copier les logiciels depuis la clé de votre professeur</a></li>
+                <li> Ordinateur de la région</li>
+                 <li> in progress ...</li>
+              </ul>
+
+            </div>
+          </div>
         </div></div></section>
 
     <!-- ======= Contact Section ======= -->
