Ajout du template de resume de cours Ajout du resume de la scéance von neumann

--- a/rentree.html
+++ b/rentree.html
@@ -83,7 +83,7 @@
       <div class="container">
         <h1>Thèmes</h1>
         <ul>
-          <li>  Représentation des données,</li>
+          <li> Représentation des données</li>
           <li> Traitement des données</li>
           <li>Interaction Homme Machine</li>
           <li>Architectures matérielles</li>
