ajout Emission et page eureka

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
             </ul>-->
           </li>
           <li class="dropdown"><a href="#"><span>Architectures matérielles</span> <i class="bi bi-chevron-down"></i></a>
-            <ul><li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
+            <ul>
+              <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
+              <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
            <!-- 
             <li><a href="#">Deep Drop Down 2</a></li>
             <li><a href="#">Deep Drop Down 3</a></li>
