--- a/index.html
+++ b/index.html
@@ -66,9 +66,17 @@
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Langages  / programmation</span> <i class="bi bi-chevron-down"></i></a>
-             <!-- <ul>
-             
-                <li class="dropdown"><a href="#"><span>POO</span> <i class="bi bi-chevron-right"></i></a>
+              <ul>
+                <li class="dropdown"><a href=""><span>Python</span> <i class="bi bi-chevron-down"></i></a>
+                  <ul>
+                   <li><a href="./langageprog/python/5478pythonbases.html">Les bases</a></li>
+                <!--   <li><a href="#">Deep Drop Down 2</a></li>
+                   <li><a href="#">Deep Drop Down 3</a></li>
+                   <li><a href="#">Deep Drop Down 4</a></li>
+                   <li><a href="#">Deep Drop Down 5</a></li> -->
+                 </ul> 
+               </li>
+             <!--   <li class="dropdown"><a href="#"><span>POO</span> <i class="bi bi-chevron-right"></i></a>
                  <ul>
                     <li><a href="#">Deep Drop Down 1</a></li>
                     <li><a href="#">Deep Drop Down 2</a></li>
@@ -76,9 +84,9 @@
                     <li><a href="#">Deep Drop Down 4</a></li>
                     <li><a href="#">Deep Drop Down 5</a></li>
                   </ul> 
-                </li>
+                </li>-->
              
-            </ul>-->
+            </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Architectures matérielles</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
