--- a/index.html
+++ b/index.html
@@ -56,6 +56,43 @@
           <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
           <li><a class="nav-link scrollto" href="#about">A propos</a></li>
           <li><a class="nav-link scrollto" href="#exos">Exercices</a></li>
+          <li class="dropdown"><a href="#"><span>Architectures matérielles</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
+              <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
+           <!-- 
+            <li><a href="#">Deep Drop Down 2</a></li>
+            <li><a href="#">Deep Drop Down 3</a></li>
+            <li><a href="#">Deep Drop Down 4</a></li>
+            <li><a href="#">Deep Drop Down 5</a></li>-->
+          </ul>
+        </li>
+        <li class="dropdown"><a href="#"><span>Langages  / programmation</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li class="dropdown"><a href="./langageprog/histoire/frisehisto.html"><span>Histoire</span></a>
+            <li class="dropdown"><a href=""><span>Python</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+               <li><a href="./langageprog/python/5478pythonbases.html">Les bases</a></li>
+            <!--   <li><a href="#">Deep Drop Down 2</a></li>
+               <li><a href="#">Deep Drop Down 3</a></li>
+               <li><a href="#">Deep Drop Down 4</a></li>
+               <li><a href="#">Deep Drop Down 5</a></li> -->
+             </ul> 
+           </li>
+         <!--   <li class="dropdown"><a href="#"><span>POO</span> <i class="bi bi-chevron-right"></i></a>
+             <ul>
+                <li><a href="#">Deep Drop Down 1</a></li>
+                <li><a href="#">Deep Drop Down 2</a></li>
+                <li><a href="#">Deep Drop Down 3</a></li>
+                <li><a href="#">Deep Drop Down 4</a></li>
+                <li><a href="#">Deep Drop Down 5</a></li>
+              </ul> 
+            </li>-->
+         
+        </ul>
+      </li>
+          <li class="dropdown"><a href="#"><span>Thèmes</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
           <li class="dropdown"><a href="#"><span>Représentation des données</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <!-- <li><a href="#">Deep Drop Down 1</a></li>
@@ -67,6 +104,7 @@
           </li>
           <li class="dropdown"><a href="#"><span>Langages  / programmation</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
+                <li class="dropdown"><a href="./langageprog/histoire/frisehisto.html"><span>Histoire</span> <i class="bi bi-chevron-right"></i></a>
                 <li class="dropdown"><a href=""><span>Python</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                    <li><a href="./langageprog/python/5478pythonbases.html">Les bases</a></li>
@@ -120,6 +158,7 @@
           <li class="dropdown"><a href="#"><span>Algorithmique</span> <i class="bi bi-chevron-down"></i></a>
             
           </li>
+            </ul>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
