Init de la page assembleur

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <ul>
               <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
               <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
+              <li><a href="amo/initassembleur/initationassembleur.html">Assembleur</a></li>
            <!-- 
             <li><a href="#">Deep Drop Down 2</a></li>
             <li><a href="#">Deep Drop Down 3</a></li>
@@ -130,6 +131,7 @@
             <ul>
               <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
               <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
+              <li><a href="amo/initassembleur/initationassembleur.html">Assembleur</a></li>
            <!-- 
             <li><a href="#">Deep Drop Down 2</a></li>
             <li><a href="#">Deep Drop Down 3</a></li>
@@ -385,9 +387,15 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Lieux:</h4>
-                <p>Lycée Saint sernin  Saverne</p>
-                <p>Lieu et horaires</p>
+                <h4>Lycée Saint sernin salle 129</h4>
+                
+                  <ul> Horaires
+                    <li>Lundi 8h - 12h</li>
+                    <li>Mardi 10h - 12h</li>
+                    <li>Jeudi 12h - 17h30</li>
+                    <li>Vendredi 8h - 17h30</li>
+                  </ul>
+                
               </div>
 
             </div>
