--- a/langageprog/python/5478pythonbases.html
+++ b/langageprog/python/5478pythonbases.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Site de la NSI du lycée Saint Sernin</title>
+  <title>Python les bases </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -121,33 +121,6 @@
             <!-- <th> Commentaires</th> -->
           </thead>
           <tbody>
-<!-- 
-            <tr>
-              <td class="padleft10px">Photosites, pixels, résolution (du capteur, de l'image), profondeur de couleur
-              </td>
-              <td class="padleft10px">Distinguer les photosites du capteur et les pixels de l’image en comparant les
-                résolutions du capteur et de l’image selon les réglages de l’appareil. </td>
-            </tr>
-            <tr>
-              <td class="padleft10px">Métadonnées EXIF</td>
-              <td class="padleft10px"> Retrouver les métadonnées d’une photographie</td>
-            </tr>
-            <tr>
-              <td class="padleft10px"></td>
-              <td class="padleft10px">Traiter par programme une image pour la transformer en agissant sur les trois
-                composantes de ses pixels. </td>
-            </tr>
-            <tr>
-              <td class="padleft10px">Traitement d'image</td>
-              <td class="padleft10px">Expliciter des algorithmes associés à la prise de vue.</td>
-            </tr>
-            <tr>
-              <td class="padleft10px">Rôle des algorithmes dans les appareils photo numériques</td>
-              <td class="padleft10px"> Identifier les étapes de la construction de l’image finale.</td>
-            </tr>
-            </tr>
-          </tbody>
-        </table> -->
 
         <p>
 
