Ajout de la page de résumé de cours assembleur

--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
               <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
               <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
               <li><a href="amo/initassembleur/initationassembleur.html">Assembleur</a></li>
+              <!-- <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li> -->
+              <!-- <li><a href="amo/initassembleur/">Tp Assembleur</a></li>
+              <li><a href="amo/initassembleur/">Exercices Assembleur</a></li> -->
            <!-- 
             <li><a href="#">Deep Drop Down 2</a></li>
             <li><a href="#">Deep Drop Down 3</a></li>
