Ajout AMO init assembleur

--- a/amo/initassembleur/757584initationassembleurrExercices.html
+++ b/amo/initassembleur/757584initationassembleurrExercices.html
@@ -159,9 +159,9 @@
               <div class="col-lg-6 order-1 order-lg-1 mt-3 mt-lg-0 text-center">
                   <h3>Langage machine</h3>
 <p class="justifier">Le processeur n’interprète que des signaux électriques représentés par:
-<ul><li>
+<ul><li><i class="ri-check-double-line"></i>
   0 pas de courant électrique.</li>
-  <li>1 passage de courant électrique.</li></ul><br>
+  <li><i class="ri-check-double-line"></i>1 passage de courant électrique.</li></ul><br>
 </p>
 <p class="justifier">
   On parle de langage <b> binaire</b>. Il est difficile pour l’Homme d’écrire un programme directement en binaire.
