--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <li><a href="amo/vonneumann/vonneumann.html">Von Neumann</a></li>
               <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
               <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li> 
+              <li><a href="amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li> 
            <!-- 
             <li><a href="#">Deep Drop Down 2</a></li>
             <li><a href="#">Deep Drop Down 3</a></li>
@@ -133,6 +134,7 @@
               <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
                <!--<li><a href="amo/initassembleur/initationassembleur.html">Assembleur</a></li>-->
               <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li> 
+              <li><a href="amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li> 
               <!-- <li><a href="amo/initassembleur/">Tp Assembleur</a></li>
               <li><a href="amo/initassembleur/">Exercices Assembleur</a></li> -->
            <!-- 
