Ajout des exos assembleurs notebook, zip et page et prepa du lien dans l'index

--- a/index.html
+++ b/index.html
@@ -62,11 +62,8 @@
               <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
               <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li> 
               <li><a href="amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li> 
-           <!-- 
-            <li><a href="#">Deep Drop Down 2</a></li>
-            <li><a href="#">Deep Drop Down 3</a></li>
-            <li><a href="#">Deep Drop Down 4</a></li>
-            <li><a href="#">Deep Drop Down 5</a></li>-->
+                <!-- <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a></li>  -->
+
           </ul>
         </li>
         <li class="dropdown"><a href="#"><span>Langages  / programmation</span> <i class="bi bi-chevron-down"></i></a>
@@ -135,6 +132,7 @@
                <!--<li><a href="amo/initassembleur/initationassembleur.html">Assembleur</a></li>-->
               <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li> 
               <li><a href="amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li> 
+              <!-- <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a></li>  -->
               <!-- <li><a href="amo/initassembleur/">Tp Assembleur</a></li>
               <li><a href="amo/initassembleur/">Exercices Assembleur</a></li> -->
            <!-- 
