--- a/amo/initassembleur/955407initationassembleurresume.html
+++ b/amo/initassembleur/955407initationassembleurresume.html
@@ -373,6 +373,18 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-3 col-md-6"></div>
+          <div class="box" data-aos="zoom-in">
+            <h3>Le fichier de documentation ARM </h3>
+          
+
+
+            </ul>
+            <div class="btn-wrap">
+              <a target="_blank" href="ressources/manuel-simulateurARM.pdf" class="btn-buy">Télécharger</a>
+            </div>
+          </div>
+        </div>
       </div>
  
   </section><!-- End Annexes Section -->
