--- a/amo/initassembleur/955407initationassembleurresume.html
+++ b/amo/initassembleur/955407initationassembleurresume.html
@@ -64,7 +64,7 @@
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
 
-          <li class="dropdown"><a href="#"><span>Annexes</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href=""><span>Annexes</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
              <li><a href="#liens">Liens</a></li>
               <li><a href="#pj">Pieces Jointes</a></li>
