--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <li><a href="amo/eureka/vonneumanneureka.html">Emission Eureka</a></li>
               <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li> 
               <li><a href="amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li> 
-                <!-- <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a></li>  -->
+              <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a></li> 
 
           </ul>
         </li>
@@ -124,7 +124,7 @@
                <!--<li><a href="amo/initassembleur/initationassembleur.html">Assembleur</a></li>-->
               <li><a href="amo/initassembleur/955407initationassembleurresume.html">Assembleur</a></li> 
               <li><a href="amo/initassembleur/3154tpassembleurresume.html">TP Assembleur</a></li> 
-              <!-- <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a></li>  -->
+              <li><a href="amo/initassembleur/757584initationassembleurrExercices.html">Exercices Assembleur</a></li> 
               <!-- <li><a href="amo/initassembleur/">Tp Assembleur</a></li>
               <li><a href="amo/initassembleur/">Exercices Assembleur</a></li> -->
            <!-- 
