--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
             <li class="dropdown"><a href=""><span>Python</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                <li><a href="./langageprog/python/5478pythonbases.html">Les bases</a></li>
-            <!--   <li><a href="#">Deep Drop Down 2</a></li>
+               <li><a href="./langageprog/python/fonctions.html">Les fonctions</a></li>
+               <li><a href="./langageprog/python/specification_assertions.html">Specifications et assertions</a></li>
+               <li><a href="./langageprog/python/boucles.html">Boucles</a></li>
+               <li><a href="./langageprog/python/instructionscondit.html">Instructions conditionnelles</a></li>
+               <li><a href="./langageprog/python/booleen.html">Booléens</a></li>  <!--   <li><a href="#">Deep Drop Down 2</a></li>
                <li><a href="#">Deep Drop Down 3</a></li>
                <li><a href="#">Deep Drop Down 4</a></li>
                <li><a href="#">Deep Drop Down 5</a></li> -->
@@ -102,7 +106,11 @@
                 <li class="dropdown"><a href=""><span>Python</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                    <li><a href="./langageprog/python/5478pythonbases.html">Les bases</a></li>
-              
+                   <li><a href="./langageprog/python/fonctions.html">Les fonctions</a></li>
+                   <li><a href="./langageprog/python/specification_assertions.html">Specifications et assertions</a></li>
+                   <li><a href="./langageprog/python/boucles.html">Boucles</a></li>
+                   <li><a href="./langageprog/python/instructionscondit.html">Instructions conditionnelles</a></li>
+                   <li><a href="./langageprog/python/booleen.html">Booléens</a></li>
                 <!--   <li><a href="#">Deep Drop Down 2</a></li>
                    <li><a href="#">Deep Drop Down 3</a></li>
                    <li><a href="#">Deep Drop Down 4</a></li>
