ajout de la page sur les booléens Changement de l'icone pour les définitions suppression des annexes inexistantes

--- a/langageprog/python/5478pythonbases.html
+++ b/langageprog/python/5478pythonbases.html
@@ -138,7 +138,7 @@
         <ul class="nav nav-tabs row d-flex">
           <li class="nav-item col-3" data-aos="zoom-in">
             <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-              <i class="fa-regular fa-file-image"></i>
+              <i class="fa-solid fa-ear-listen"></i>
               <h4 class="d-none d-lg-block">Définitions</h4>
             </a>
           </li>
