--- a/langageprog/python/fonctions.html
+++ b/langageprog/python/fonctions.html
@@ -137,7 +137,7 @@
         <ul class="nav nav-tabs row d-flex">
           <li class="nav-item col-3" data-aos="zoom-in">
             <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-              <i class="fa-solid fa-laptop"></i>
+              <i class="fa-solid fa-ear-listen"></i>
               <h4 class="d-none d-lg-block">Définition</h4>
             </a>
           </li>
@@ -268,98 +268,44 @@
 
 
 
+<!-- ======= Annexes Section ======= -->
+<section id="annexes" class="pricing">
+  <div class="container">
+    <div class="section-title" data-aos="zoom-out">
+      <h2>Annexes</h2>
+
+    </div>
+    <div class="section-title" data-aos="zoom-out">
+      <h3 id="liens">Liens</h3>
+
+    </div>
+    
+    <div class="row">
+
+      <div class="col-lg-3 col-md-6">
+        <div class="box" data-aos="zoom-in">
+          <h3>Lien vers le notebook</h3>
+          <ul> Sur Capytale
+
+          </ul>
 
 
-    <!-- ======= Annexes Section ======= -->
-    <section id="annexes" class="pricing">
-      <div class="container">
-        <div class="section-title" data-aos="zoom-out">
-          <h2>Annexes</h2>
-
-        </div>
-        <div class="section-title" data-aos="zoom-out">
-          <h3 id="liens">Liens</h3>
-
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="box" data-aos="zoom-in">
-              <h3>Lien vers le simulateur ARM</h3>
-
-              <div class="btn-wrap">
-                <a href="https://www.peterhigginson.co.uk/ARMlite/" class="btn-buy">Y aller</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="box" data-aos="zoom-in">
-              <h3>Lien vers l'autre simulateur </h3>
-              <ul> Plus visuel
-              </ul>
-
-
-              <div class="btn-wrap">
-                <a href="https://www.peterhigginson.co.uk/AQA/" class="btn-buy">Y aller</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="box" data-aos="zoom-in">
-              <h3>Lien vers le notebook</h3>
-              <ul> Sur Capytale
-
-                <!-- <li>Nec feugiat nisl</li>
-              <li>Nulla at volutpat dola</li>
-              <li class="na">Pharetra massa</li>
-              <li class="na">Massa ultricies mi</li> -->
-              </ul>
-
-
-              <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/1f68-3842950" class="btn-buy">Y aller</a>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="section-title" data-aos="zoom-out">
-            <h3 id="pj">Pièces jointes</h3>
-
-          </div>
-
-          <div class="row">
-
-
-            <div class="col-lg-3 col-md-6">
-              <div class="box" data-aos="zoom-in">
-                <h3>Le fichier du notebook </h3>
-                <ul>Utilisable avec jupyter que vous avez:
-                  <li>sur l'ordi</li>
-                  <li> ou dans Les
-                    logiciels de la clé usb</li>
-
-
-                </ul>
-                <div class="btn-wrap">
-                  <a target="_blank" href="ressources/Programmation en assembleur.zip" class="btn-buy">Télécharger</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6"></div>
-            <div class="box" data-aos="zoom-in">
-              <h3>Le fichier de documentation ARM </h3>
-
-
-
-              </ul>
-              <div class="btn-wrap">
-                <a target="_blank" href="ressources/manuel-simulateurARM.pdf" class="btn-buy">Télécharger</a>
-              </div>
-            </div>
+          <div class="btn-wrap">
+            <a href="" class="btn-buy">Y aller</a>
           </div>
         </div>
+      </div>
+    </div>
 
-    </section><!-- End Annexes Section -->
+      <div class="section-title" data-aos="zoom-out">
+        <h3 id="pj">Pièces jointes</h3>
+
+      </div>
+
+    
+    </div>
+
+</section><!-- End Annexes Section -->
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
