Continuation des pages python + report code css des term

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                <li><a href="./langageprog/python/specification_assertions.html">Specifications et assertions</a></li>
                <li><a href="./langageprog/python/boucles.html">Boucles</a></li>
                <li><a href="./langageprog/python/instructionscondit.html">Instructions conditionnelles</a></li>
-               <li><a href="./langageprog/python/booleens.html">Booléens</a></li>  <!--   <li><a href="#">Deep Drop Down 2</a></li>
+               <li><a href="./langageprog/python/booleens.html">Booléens</a></li>
+               <li><a href="./langageprog/python/dico.html">Dictionnaires</a></li>
+               <!--   <li><a href="#">Deep Drop Down 2</a></li>
                <li><a href="#">Deep Drop Down 3</a></li>
                <li><a href="#">Deep Drop Down 4</a></li>
                <li><a href="#">Deep Drop Down 5</a></li> -->
@@ -110,7 +112,10 @@
                    <li><a href="./langageprog/python/specification_assertions.html">Specifications et assertions</a></li>
                    <li><a href="./langageprog/python/boucles.html">Boucles</a></li>
                    <li><a href="./langageprog/python/instructionscondit.html">Instructions conditionnelles</a></li>
-                   <li><a href="./langageprog/python/booleen.html">Booléens</a></li>
+                   <li><a href="./langageprog/python/booleens.html">Booléens</a></li>
+                   <li><a href="./langageprog/python/dico.html">Dictionnaires</a></li>
+                   <li><a href="./langageprog/python/strings.html">String</a></li>
+                   <li><a href="./langageprog/python/tuples.html">Tuple</a></li>
                 <!--   <li><a href="#">Deep Drop Down 2</a></li>
                    <li><a href="#">Deep Drop Down 3</a></li>
                    <li><a href="#">Deep Drop Down 4</a></li>
