--- a/langageprog/python/listes.html
+++ b/langageprog/python/listes.html
@@ -71,7 +71,20 @@
 
             </ul>
           </li>
-
+          <li class="dropdown"><a href=""><span>Python</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+             <li><a href="./5478pythonbases.html">Les bases</a></li>
+             <li><a href="fonctions.html">Les fonctions</a></li>
+             <li><a href="./specification_assertions.html">Specifications et assertions</a></li>
+             <li><a href="./boucles.html">Boucles</a></li>
+             <li><a href="./instructionscondit.html">Instructions conditionnelles</a></li>
+             <li><a href="./booleens.html">Booléens</a></li>
+             <li><a href="./dico.html">Dictionnaires</a></li>
+             <li><a href="./strings.html">String</a></li>
+             <li><a href="./tuples.html">Tuple</a></li>
+ 
+           </ul> 
+         </li>
 
           <!-- <li><a class="nav-link scrollto" href="#exos">Exercices</a></li> -->
         </ul>
