Ajout des liens vers les notebook

--- a/langageprog/python/boucles.html
+++ b/langageprog/python/boucles.html
@@ -275,7 +275,7 @@
 
     </div>
     
-    <!-- <div class="row">
+    <div class="row">
 
       <div class="col-lg-3 col-md-6">
         <div class="box" data-aos="zoom-in">
@@ -286,11 +286,11 @@
 
 
           <div class="btn-wrap">
-            <a href="" class="btn-buy">Y aller</a>
+            <a href="https://capytale2.ac-paris.fr/web/c/c7fa-4108480" class="btn-buy">Y aller</a>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
 
 
