ajout de la page dessiner turtle +menu changement dans le template

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <li><a href="./langageprog/constructions_elem/projetjeudede.html">Projet jeu de dé</a></li>
               <li><a href="./langageprog/constructions_elem/edi.html">Activités</a></li>
               <li><a href="./langageprog/constructions_elem/exoconstructelem.html">Exercices</a></li>
-      
+              <li><a href="./langageprog/constructions_elem/tpturtle.html">Dessiner avec Turtle</a></li>
            </ul> 
          </li>
         </ul>
