ajout pages fonctions

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
               <li><a href="./langageprog/constructions_elem/tpturtle.html">Dessiner avec Turtle</a></li>
            </ul> 
          </li>
+         <li class="dropdown"><a href=""><span>Fonctions</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a href="./langageprog/Fonctions/jeudenim.html">Projet jeu de nim</a></li>
+            <li><a href="./langageprog/Fonctions/fonctions1.html">Première approche</a></li>
+            <!-- <li><a href="./langageprog/Fonctions/exoconstructelem.html">Exercices</a></li>
+            <li><a href="./langageprog/Fonctions/tpturtle.html">Dessiner avec Turtle</a></li> -->
+         </ul> 
+       </li>
         </ul>
       </li>
           <li class="dropdown"><a href="#"><span>Thèmes</span> <i class="bi bi-chevron-down"></i></a>
@@ -113,6 +121,14 @@
           
                </ul> 
              </li>
+             <li class="dropdown"><a href=""><span>Fonctions</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+                <li><a href="./langageprog/Fonctions/jeudenim.html">Projet jeu de nim</a></li>
+                <li><a href="./langageprog/Fonctions/fonctions1.html">Première approche</a></li>
+                <!-- <li><a href="./langageprog/Fonctions/exoconstructelem.html">Exercices</a></li>
+                <li><a href="./langageprog/Fonctions/tpturtle.html">Dessiner avec Turtle</a></li> -->
+             </ul> 
+           </li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Architectures matérielles</span> <i class="bi bi-chevron-down"></i></a>
