Changement des styles pour les listes imbriquées.

--- a/langageprog/Fonctions/jeudenim.html
+++ b/langageprog/Fonctions/jeudenim.html
@@ -148,16 +148,19 @@
           <div class="tab-pane active show" id="tab-1">
             <div class="row">
               <p>
-                <ul class="examliste">
+                <ul class="examlisteoutside">
                   Algorithme général du jeu de Nim:
 
 <li>Initialiser le joueur de départ</li>
-<li>Tant qu’il n’y a pas de gagnant:</li>
+<li>Tant qu’il n’y a pas de gagnant:
+<ul class="examlisteinside">
+ 
 <li>Afficher les allumettes</li>
 <li>Choisir le nombre d’allumettes à retirer</li>
 <li>Afficher le choix du joueur</li>
 <li>Retirer les allumettes choisies</li>
 <li>Changer de joueur</li>
+</ul></li>
 <li>Afficher le gagnant</li>
 </ul>
 
