Ajout de la partie exercice sur les fonctions

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
           <ul>
             <li><a href="./langageprog/Fonctions/jeudenim.html">Projet jeu de nim</a></li>
             <li><a href="./langageprog/Fonctions/fonctions1.html">Première approche</a></li>
-            <!-- <li><a href="./langageprog/Fonctions/exoconstructelem.html">Exercices</a></li>
-            <li><a href="./langageprog/Fonctions/tpturtle.html">Dessiner avec Turtle</a></li> -->
+             <li><a href="./langageprog/Fonctions/exercicesfonctions.html">Exercices</a></li>
+            <!--<li><a href="./langageprog/Fonctions/tpturtle.html">Dessiner avec Turtle</a></li> -->
          </ul> 
        </li>
         </ul>
@@ -118,15 +118,17 @@
                 <ul>
                   <li><a href="./langageprog/constructions_elem/projetjeudede.html">Projet jeu de dé</a></li>
                   <li><a href="./langageprog/constructions_elem/edi.html">Activités</a></li>
-          
+                  <li><a href="./langageprog/constructions_elem/exoconstructelem.html">Exercices</a></li>
+                  <li><a href="./langageprog/constructions_elem/tpturtle.html">Dessiner avec Turtle</a></li>
+         
                </ul> 
              </li>
              <li class="dropdown"><a href=""><span>Fonctions</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="./langageprog/Fonctions/jeudenim.html">Projet jeu de nim</a></li>
                 <li><a href="./langageprog/Fonctions/fonctions1.html">Première approche</a></li>
-                <!-- <li><a href="./langageprog/Fonctions/exoconstructelem.html">Exercices</a></li>
-                <li><a href="./langageprog/Fonctions/tpturtle.html">Dessiner avec Turtle</a></li> -->
+                 <li><a href="./langageprog/Fonctions/exercicesfonctions.html">Exercices</a></li>
+                <!--<li><a href="./langageprog/Fonctions/tpturtle.html">Dessiner avec Turtle</a></li> -->
              </ul> 
            </li>
             </ul>
