Ajout de la page sur les tess unitaires des fonctions.

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
           <ul>
             <li><a href="./langageprog/Fonctions/jeudenim.html">Projet jeu de nim</a></li>
             <li><a href="./langageprog/Fonctions/fonctions1.html">Première approche</a></li>
-             <li><a href="./langageprog/Fonctions/exercicesfonctions.html">Exercices</a></li>
-            <!--<li><a href="./langageprog/Fonctions/tpturtle.html">Dessiner avec Turtle</a></li> -->
+            <li><a href="./langageprog/Fonctions/variables.html">Portée des variables</a></li>
+            <li><a href="./langageprog/Fonctions/exercicesfonctions.html">Exercices</a></li>
+            <li><a href="./langageprog/Fonctions/fonctions3tests.html">Tests unitaires</a></li>
+            
          </ul> 
        </li>
         </ul>
