--- a/langageprog/Fonctions/fonctions1.html
+++ b/langageprog/Fonctions/fonctions1.html
@@ -236,7 +236,7 @@ c = m.cos(0.5)</code></pre>
           <div class="col-lg-3 col-md-6">
             <div class="box" data-aos="zoom-in">
               <h3>Lien vers le notebook</h3>
-              <ul> Sur Capytale
+              <ul> La calculatrice
               </ul>
 
 
@@ -245,7 +245,20 @@ c = m.cos(0.5)</code></pre>
               </div>
             </div>
           </div> 
+          <div class="col-lg-3 col-md-6">
+            <div class="box" data-aos="zoom-in">
+              <h3>Lien vers le notebook</h3>
+              <ul> Pierre feuille ciseaux
+              </ul>
 
+
+              <div class="btn-wrap">
+                <a href="https://capytale2.ac-paris.fr/web/c/4eb7-4175064" class="btn-buy">Y aller</a>
+              </div>
+            </div>
+          </div> 
+
+          
 
           <div class="section-title" data-aos="zoom-out">
             <h3 id="pj">Pièces jointes</h3>
