--- a/langageprog/Fonctions/variables.html
+++ b/langageprog/Fonctions/variables.html
@@ -198,7 +198,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/5513-4320816" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/9f19-4446716" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
@@ -212,7 +212,7 @@
           <div class="row">
 
 
-         <div class="col-lg-3 col-md-6">
+         <!-- <div class="col-lg-3 col-md-6">
               <div class="box" data-aos="zoom-in">
                 <h3>Le fichier du notebook </h3>
                 <ul>en pdf</ul>
@@ -223,7 +223,7 @@
                   <a target="_blank" href="ressources/jeudenim.pdf" class="btn-buy">Télécharger</a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div> 
 
     </section><!-- End Annexes Section -->
