--- a/langageprog/Fonctions/exercicesfonctions.html
+++ b/langageprog/Fonctions/exercicesfonctions.html
@@ -85,7 +85,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Fonctions - Portée des variables</h2>
+          <h2 class="animate__animated animate__fadeInDown">Fonctions - Exercices</h2>
           <!-- <a href="#resume" class="btn-get-started animate__animated animate__fadeInUp scrollto">Lire plus</a> -->
         </div>
       </div> <!---->
@@ -196,8 +196,20 @@
               </div>
             </div>
           </div> 
+          <!-- challenge 
+            <div class="col-lg-3 col-md-6">
+            <div class="box" data-aos="zoom-in">
+              <h3>Lien vers le notebook des challenges</h3>
+              <ul> 
+              </ul>
 
 
+              <div class="btn-wrap">
+                <a href="https://capytale2.ac-paris.fr/web/c/2fbd-4511919" class="btn-buy">Y aller</a>
+              </div>
+            </div>
+          </div> 
+-->
           <div class="section-title" data-aos="zoom-out">
             <h3 id="pj">Pièces jointes</h3>
 
