--- a/langageprog/Fonctions/fonctions3tests.html
+++ b/langageprog/Fonctions/fonctions3tests.html
@@ -224,7 +224,7 @@ assert cinema(70) == 16</code></pre>
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/d47b-4320715" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/7a90-4512534" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
