--- a/langageprog/Fonctions/jeudenim.html
+++ b/langageprog/Fonctions/jeudenim.html
@@ -271,8 +271,8 @@
   
           <div class="col-lg-3 col-md-6">
             <div class="box" data-aos="zoom-in">
-              <h3>Lien vers le notebook</h3>
-              <ul> Sur Capytale
+              <h3>Lien vers le notebook </h3>
+              <ul>  le cahier des charges
               </ul>
 
 
@@ -281,6 +281,19 @@
               </div>
             </div>
           </div> 
+          div class="col-lg-3 col-md-6">
+          <div class="box" data-aos="zoom-in">
+            <h3>Lien vers le notebook </h3>
+            <ul>  la modélisation
+            </ul>
+
+
+            <div class="btn-wrap">
+              <a href=" https://capytale2.ac-paris.fr/web/c/e968-4556827" class="btn-buy">Y aller</a>
+            </div>
+          </div>
+        </div> 
+         
 
 
           <div class="section-title" data-aos="zoom-out">
