--- a/donrep/entiers/relatif.html
+++ b/donrep/entiers/relatif.html
@@ -137,8 +137,8 @@
         <ul class="nav nav-tabs row d-flex">
           <li class="nav-item col-3" data-aos="zoom-in">
             <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-              <i class="fa-solid fa-hand"></i>
-              <h4 class="d-none d-lg-block">Jeu de main</h4>
+              <i class="fa-solid fa-paper-plane"></i>
+              <h4 class="d-none d-lg-block">Entiers relatifs</h4>
             </a>
           </li>
        
