--- a/donrep/entiers/entiers.html
+++ b/donrep/entiers/entiers.html
@@ -262,7 +262,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/d47b-4320715" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/814a-4742088" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
