--- a/donrep/entiers/tpjeumain.html
+++ b/donrep/entiers/tpjeumain.html
@@ -187,7 +187,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/d47b-4320715" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/001d-4742159" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
