--- a/donrep/entiers/exercicesentiers.html
+++ b/donrep/entiers/exercicesentiers.html
@@ -154,7 +154,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/d47b-4320715" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/121d-4745712" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
