--- a/donrep/entiers/relatif.html
+++ b/donrep/entiers/relatif.html
@@ -194,7 +194,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/d47b-4320715" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/7e32-4745752" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
