--- a/donrep/flottants/flottants.html
+++ b/donrep/flottants/flottants.html
@@ -246,7 +246,7 @@
 
 
               <div class="btn-wrap">
-                <a href="" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/034e-4745770" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
