--- a/premiere.html
+++ b/premiere.html
@@ -36,28 +36,26 @@
     <body>
      
 
-        <section id="progression">
-
+       <section id="progression">
+        <!-- <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h1 class="display-4">Première</h1>
+            <p class="lead">Les cours sont classés par thème pour une lecture plus aisée.
+                Cependant chaque activité peut faire appel à plusieurs éléments du programme de l'année,
+                afin de travailler les notions de manière régulière.
+            </p>
+        </div> -->
 
         <div class="container">
             <h3>Rentrée</h3>
-            <div class="list-group mb-3">
-                <a href="divers/rentree/premiere-slides.pdf" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">
-                    Rentrée
-                </a>
-                <a href="seconde/web/outils-numeriques/outils-numeriques-slides.pdf" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">
-                    Outils numériques
-                </a>
-            </div>
 
 
             <h3>Architecture Matérielle </h3>
             <div class="list-group mb-3">
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">
-                     Von Neumann
+                     Démonter PC et éléments ordinateur
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">
-                     Von Neumann
+                     Von Neumann 2
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    Programmation assembleur
                 </a>
@@ -130,7 +128,7 @@
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center"> Nombres flottants - Missile Patriot
                 </a>
                 <div class="list-group-item d-flex justify-content-between align-items-center">
-                     Types construits - Exercices en ligne<span class="badge badge-primary badge-pill">web</span>
+                     Types construits - Exercices en ligne
                 </div>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">  Types construits - tuple rugby
                 </a>
@@ -149,7 +147,7 @@
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Bilan types construits
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Exercices compréhension en ligne (capytale code: dc76-207570)<span class="badge badge-primary badge-pill">web</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Exercices compréhension en ligne (capytale code: dc76-207570)
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Exercices compréhension en ligne - correction
                 </a>
@@ -159,13 +157,13 @@
             <div class="list-group mb-3">
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Puissance 4
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    Puissance 4 - annexe<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    Puissance 4 - annexe
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Puissance 4 - annexe correction<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Puissance 4 - annexe correction
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    Puissance 4 - jeu de tests
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Puissance 4 - jeu de tests - annexe<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Puissance 4 - jeu de tests - annexe
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 05 - Projet jeu en grille
                 </a>
@@ -212,9 +210,9 @@
             <div class="list-group mb-3">
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">  Eval 05 - Projet jeu en grille - correction
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 05 - Projet jeu en grille - annexe<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 05 - Projet jeu en grille - annexe
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 05 - Projet jeu en grille - annexe correction<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 05 - Projet jeu en grille - annexe correction
                 </a>
             </div>
 
@@ -222,25 +220,25 @@
             <div class="list-group mb-3">
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">     - Applications Android
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    - Applications Android - annexe<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    - Applications Android - annexe
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    - Pokémon
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">     - Pokémon - annexe<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">     - Pokémon - annexe
                 </a>
 
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">     - Pokémon - correction<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">     - Pokémon - correction
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    - Exercices - données en table
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    - Exercices - données en table - annexe<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    - Exercices - données en table - annexe
                 </a>
 
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">     - Exercices - données en table - correction
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 09 - Annexe - statistiques foot<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 09 - Annexe - statistiques foot
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 09 - Annexe - élection<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 09 - Annexe - élection
                 </a>
             </div>
 
@@ -256,11 +254,11 @@
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">     kNN - Prédiction des iris
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    kNN - annexe - Iris élève<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    kNN - annexe - Iris élève
                 </a>
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">    kNN - TP qualité du vin
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">     kNN - annexe: wine quality<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">     kNN - annexe: wine quality
                 </a>
             </div>
 
@@ -280,7 +278,7 @@
             <div class="list-group mb-3">
                 <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 10 - Projet Snake - correction
                 </a>
-                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 10 - Projet Snake - annexe<span class="badge badge-primary badge-pill">zip</span>
+                <a href="" target="_blank" class="list-group-item d-flex justify-content-between align-items-center">   Eval 10 - Projet Snake - annexe
                 </a>
             </div>
 
