--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
           <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
           <li><a class="nav-link scrollto" href="#about">A propos</a></li>
           <li><a class="nav-link scrollto" href="#exos">Exercices</a></li>
-          <li class="dropdown"><a href=""><span>Représentation des données - Entiers</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href=""><span>Flottants</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="./donrep/entiers/entiers.html">Entiers</a> </li>
-              <li><a href="./donrep/entiers/tpjeumain.html">Tp jeux de mains</a></li>
-              <li><a href="./donrep/entiers/exercicesentiers.html">Exercices Entiers</a></li>
-              <li><a href="./donrep/entiers/relatif.html">Relatifs</a></li>
+              <li><a href="./donrep/flottants/flottants.html">Flottants</a> </li>
+              <li><a href="./donrep/flottants/exercicesflottants.html">Exercices Flottants</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Thèmes</span> <i class="bi bi-chevron-down"></i></a>
@@ -80,6 +78,13 @@
                   <ul>
                     <li><a href="./donrep/flottants/flottants.html">Flottants</a> </li>
                     <li><a href="./donrep/flottants/exercicesflottants.html">Exercices Flottants</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown"><a href=""><span>Types construits - par indice</span> <i class="bi bi-chevron-down"></i></a>
+                  <ul>
+                    <li><a href="./typeconstruits/parindice/puissance4.html">Puissance 4</a> </li>
+                    <li><a href="./typeconstruits/parindice/tuple.html">Tuple</a></li>
+                    <li><a href="./typeconstruits/parindice/tableau.html">Tableau</a></li>
                   </ul>
                 </li>
               </ul>
