--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
                     <li><a href="./typeconstruits/parindice/tableau.html">Tableau</a></li>
                   </ul>
                 </li>
+                <li class="dropdown"><a href="donrep/minetest/minetestproject.html"><span>Minetest</span> <i class="bi bi-chevron-down"></i></a>
+                  <!-- <ul>
+                    <li><a href="./typeconstruits/parindice/puissance4.html">Puissance 4</a> </li>
+                    <li><a href="./typeconstruits/parindice/tuple.html">Tuple</a></li>
+                    <li><a href="./typeconstruits/parindice/tableau.html">Tableau</a></li>
+                  </ul> -->
+                </li>
               </ul>
             </li>
        
