--- a/donrep/minetest/minetestproject.html
+++ b/donrep/minetest/minetestproject.html
@@ -64,7 +64,7 @@
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
         
 
-          <li class="dropdown"><a href="#"><span>Documentes </span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Documents </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#liens">Liens</a></li>
               <li><a href="#pj">Pieces Jointes</a></li>
