--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Bienvenu sur le site <span>de la NSI du lycée Saint sernin ce site est en construction</p>
+          <h2 class="animate__animated animate__fadeInDown">Bienvenue sur le site <span>de la NSI du lycée Saint sernin ce site est en construction</p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Lire plus</a>
         </div>
       </div>
