publication des notebook

--- a/typeconstruits/parindice/puissance4.html
+++ b/typeconstruits/parindice/puissance4.html
@@ -287,22 +287,11 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/5513-4320816" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/1bd3-4816776" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
-          div class="col-lg-3 col-md-6">
-          <div class="box" data-aos="zoom-in">
-            <h3>Lien vers le notebook </h3>
-            <ul>  la modélisation
-            </ul>
-
-
-            <div class="btn-wrap">
-              <a href=" https://capytale2.ac-paris.fr/web/c/e968-4556827" class="btn-buy">Y aller</a>
-            </div>
-          </div>
-        </div> 
+          
          
 
 
@@ -315,7 +304,7 @@
 
 
          <div class="col-lg-3 col-md-6">
-              <div class="box" data-aos="zoom-in">
+              <!-- <div class="box" data-aos="zoom-in">
                 <h3>Le fichier du notebook </h3>
                 <ul>en pdf</ul>
 
@@ -324,17 +313,17 @@
                 <div class="btn-wrap">
                   <a target="_blank" href="ressources/jeudenim.pdf" class="btn-buy">Télécharger</a>
                 </div>
-              </div>
+              </div> -->
 </div>
               <div class="col-lg-3 col-md-6">
                 <div class="box" data-aos="zoom-in">
-                  <h3>Les test unitaires </h3>
+                  <h3>Le code </h3>
                   <ul>fichier zip</ul>
   
   
                   </ul>
                   <div class="btn-wrap">
-                    <a target="_blank" href="ressources/test_unitaires.zip" class="btn-buy">Télécharger</a>
+                    <a target="_blank" href="./ressources/puissance4-eleve.zip" class="btn-buy">Télécharger</a>
                   </div>
                 </div>
               </div>
