--- a/typeconstruits/parindice/tableau.html
+++ b/typeconstruits/parindice/tableau.html
@@ -297,22 +297,11 @@ Les tableaux sont mutables, ce qui signifie qu’on peut modifier leurs élémen
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/d47b-4320715" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/f085-4816825" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
-          <div class="col-lg-3 col-md-6">
-            <div class="box" data-aos="zoom-in">
-              <h3>Lien vers le notebook</h3>
-              <ul> Pierre feuille ciseaux
-              </ul>
-
-
-              <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/4eb7-4175064" class="btn-buy">Y aller</a>
-              </div>
-            </div>
-          </div> 
+          
 
           
 
