--- a/typeconstruits/parindice/tuple.html
+++ b/typeconstruits/parindice/tuple.html
@@ -256,7 +256,7 @@
 
 
               <div class="btn-wrap">
-                <a href="https://capytale2.ac-paris.fr/web/c/d47b-4320715" class="btn-buy">Y aller</a>
+                <a href="https://capytale2.ac-paris.fr/web/c/e939-4816814" class="btn-buy">Y aller</a>
               </div>
             </div>
           </div> 
