--- a/donrep/entiers/exercicesentiers.html
+++ b/donrep/entiers/exercicesentiers.html
@@ -158,6 +158,31 @@
               </div>
             </div>
           </div> 
+          <div class="col-lg-3 col-md-6">
+            <div class="box" data-aos="zoom-in">
+              <h3>Lien vers une auto évaluation</h3>
+              <ul> 
+              </ul>
+
+
+              <div class="btn-wrap">
+                <a href="http://www.scientillula.net/NSI/premiere/codage%20des%20valeurs%20numeriques/autoeval.html#seriequ" class="btn-buy">Y aller</a>
+              </div>
+            </div>
+          </div> 
+           <div class="col-lg-3 col-md-6">
+            <div class="box" data-aos="zoom-in">
+              <h3>Lien vers des exercices de conversions</h3>
+              <ul> Sur Capytale
+              </ul>
+
+
+              <div class="btn-wrap">
+                <a href="http://www.scientillula.net/NSI/premiere/codage%20des%20valeurs%20numeriques/autoeval.html#conversions" class="btn-buy">Page 1</a>
+               <a href="https://info.blaisepascal.fr/nsi-exercices-representation-des-entiers/" class="btn-buy">Page2</a>
+              </div>
+            </div>
+          </div> 
 
 
           <div class="section-title" data-aos="zoom-out">
