--- a/donrep/entiers/exercicesentiers.html
+++ b/donrep/entiers/exercicesentiers.html
@@ -173,7 +173,7 @@
            <div class="col-lg-3 col-md-6">
             <div class="box" data-aos="zoom-in">
               <h3>Lien vers des exercices de conversions</h3>
-              <ul> Sur Capytale
+              <ul> Sites externes
               </ul>
 
 
